[package]
name = "carveout"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["dynamic", "bevy_dynamic_plugin", "bevy_wgpu", "bevy_winit", "png", "x11"] }
egui = { version = "0.15.0", features = ["multi_threaded", "serialize"] }
bevy_egui = { git = "https://github.com/LU15W1R7H/bevy_egui" }
#bevy_egui = "0.7.1"
enterpolation = { git = "https://github.com/LU15W1R7H/enterpolation" }
#enterpolation = "0.1.1"
serde = { version = "1.0.130", features = ["serde_derive"] }
bincode = "1.3.3"
dirs = "4.0.0"

