[package]
name = "carveout"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.5.0", default-features = false, features = ["bevy_wgpu", "bevy_winit", "png", "x11"] }
egui = { version = "0.16.1", features = ["multi_threaded", "serialize"] }
bevy_egui = "0.9.0"
enterpolation = { git = "https://github.com/LU15W1R7H/enterpolation" }
#enterpolation = "0.1.1"
serde = { version = "1.0.133", features = ["serde_derive"] }
bincode = "1.3.3"
dirs = "4.0.0"
rfd = "0.6.3"
palette = { version = "0.6.0", features = ["named", "serializing"] }

