[package]
name = "carveout"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.6.1", default-features = true }
egui = { version = "0.16.0", features = ["multi_threaded", "serialize"] }
bevy_egui = "0.11.1"
enterpolation = { git = "https://github.com/LU15W1R7H/enterpolation" }
#enterpolation = "0.1.1"
serde = { version = "1.0.136", features = ["serde_derive"] }
bincode = "1.3.3"
dirs = "4.0.0"
rfd = "0.8.0"
palette = { version = "0.6.0", features = ["named", "serializing"] }

